#pragma once

enum class CampaignType {
  GENERIC
};
