#pragma once

#include "./event.hpp"

class EventGeneric : public Event {

public:
  EventGeneric();
};
